Improvement of JMX-management code Added some Java7 instruments Made code in sync with Java7